change proj structure, change readme

--- a/clicker.html
+++ b/clicker.html
@@ -5,25 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="clicker_style.css">
-    <title>Document</title>
+    <title>Simple Clicker</title>
 </head>
 <body>
     <div class="main--block">
         <div class="head">
             <div class="logo">
-                <img src="logo.svg" alt="logo">
+                <img src="src/logo.svg" alt="logo">
             </div>
-            <!-- <div class="links">
-                <a href="#">link1</a>
-                <a href="#">link2</a>
-                <a href="#">link3</a>
-                <a href="#">link4</a>
-            </div> -->
         </div>
         <div class="body">
             <div class="loading"></div>
             <div class="button">Click</div>
-            <!-- <div class="info">0</div> -->
             <div class="score">Score: 0</div>
             <div class="sum">Sum: 0</div>
             <div class="main">
@@ -75,281 +68,10 @@
         <div class="footer">
             <p class="llc">© 2021 Alexkot LLC</p>
             <div class="logo">
-                <img src="logo.svg" alt="logo">
+                <img src="src/logo.svg" alt="logo">
             </div>
         </div>
     </div>
-
-    <script>
-        // GET ITEMS FROM HTML
-        let sum = document.querySelector('.sum');
-        let but = document.querySelector('.button');
-        let load = document.querySelector('.loading');
-        let scor = document.querySelector('.score');
-        let curSpeed = document.querySelector('.curSpeed');
-        let spUpdCost = document.querySelector('.spUpdCost');
-        let curNum = document.querySelector('.curNum');
-        let numUpdCost = document.querySelector('.numUpdCost');
-        let spdBt = document.querySelector('.spdBt');
-        let numBt = document.querySelector('.numBt');
-        let blocks = document.querySelectorAll('.block');
-
-        //INIT SOME VARIABLES
-        let fieldblock = [];
-        let arr = [];
-        let a = [];
-        let b = [];
-
-        //GET ITEMS FROM LOCALSTORAGE
-        let score = +localStorage.getItem('score') || 0;
-        let summ = +localStorage.getItem('sum') || 0
-        let time = +localStorage.getItem('time') || 70;
-        let cost1 = +localStorage.getItem('cost1') || 4500;
-        let cost2 = +localStorage.getItem('cost2') || 4500;
-        let currNum = +localStorage.getItem('currNum') || 1;
-        let state = +localStorage.getItem('state') || 0;
-
-        //SET STARTS STATE TO VARIABLES
-        scor.textContent = `Score: ${numToRead(score)}`;
-        sum.textContent = `Sum: ${numToRead(summ)}`;
-        curNum.textContent = numToRead(currNum);
-        numUpdCost.textContent = numToRead(cost1);
-        curSpeed.textContent = time/10 + 's'
-        spUpdCost.textContent = numToRead(cost2);
-        let color = '#ff0ff0';
-        let field = [
-            [0,0,0,0],
-            [0,0,0,0],
-            [0,0,0,0],
-            [0,0,0,0],
-            [0,0,0,0],
-            [0,0,0,0],
-        ];
-
-        if (localStorage.getItem('field')){
-            let help = localStorage.getItem('field').split(',');
-            for(let i = 0; i<6;i++){
-                for (let j = 0; j<4; j++){
-                field[i][j] = help[i*4+j];
-                }
-            }
-        }
-        
-        for (let block of blocks) {
-            arr.push(block);
-        }
-
-        for (let block of blocks) {
-            block.onclick = function () {
-                if (a.length===0) {
-                    a.push(arr.indexOf(block));
-                    a.push(+field[(Math.floor(+a[0]/4))][a[0]%4]);
-                    a.push('a');
-                    block.classList.add('active');
-                }
-                else if (b.length===0  && arr.indexOf(block)!==a[0]){
-                    b.push(arr.indexOf(block))
-                    b.push(+field[(Math.floor(+b[0]/4))][b[0]%4]);
-                    b.push('b');
-                    if (a[1]===b[1]){
-                        arr[b[0]].textContent = +b[1]*2===0 ? '' : +b[1]*2;
-                        arr[a[0]].textContent = '';
-                        field[Math.floor(b[0]/4)][b[0]%4]=+b[1]*2
-                        field[Math.floor(a[0]/4)][a[0]%4]=0
-                        arr[a[0]].classList.remove('active');
-                        a = [];
-                        b = [];
-                        draw();
-                    }else {
-                        [arr[a[0]].textContent,arr[b[0]].textContent]=[arr[b[0]].textContent,arr[a[0]].textContent];
-                        [field[Math.floor(b[0]/4)][b[0]%4],field[Math.floor(a[0]/4)][a[0]%4]] = [field[Math.floor(a[0]/4)][a[0]%4],field[Math.floor(b[0]/4)][b[0]%4]];
-                        arr[a[0]].classList.remove('active');
-                        a = [];
-                        b = [];
-                        draw();
-                    }
-                }else if (a.length!==0 && b.length===0 && arr.indexOf(block)===a[0]) {
-                    arr[a[0]].classList.remove('active');
-                        a = [];
-                        b = [];
-                }
-            }
-        }
-
-        function numToRead(num) {
-            let arr = String(num).split('');
-            let time = '';
-            let res = '';
-            for (let i = 1; i<=arr.length; i++){
-                time = arr[arr.length-i];
-                res = time+res;
-                if (i%3===0){
-                    time = ','
-                    res = time+res;
-                }
-            }
-            if (res[0]===','){
-                res = res.split('').splice(1).join('');
-            }
-            return res;
-        }
-
-        for (let i = 0; i<6 ; i++) {
-            fieldblock[i] = [];
-            for (let j = 0; j<4; j++) {
-                fieldblock[i][j] = blocks[i*4+j];
-            }
-        }
-
-        function currentSum() {
-            res = 0
-            for (let i = 0; i<6 ; i++) {
-                for (let j = 0; j<4; j++) {
-                    res+=+field[i][j];
-                }
-            }
-            return +res
-        }
-
-        function scoreupdate(score, sum) {
-            return score + sum
-        }
-
-        numBt.onclick = function () {
-            check = buying(score,cost1);
-            if (check){
-                score = score-cost1;
-                cost1=Math.round(cost1*3.7);
-                for(let i = 0; i<field.length; i++){
-                    for(let j = 0; j< field[0].length; j++){
-                       if (field[i][j]<=+currNum){
-                        field[i][j]*=2;
-                       }
-                    }
-                }
-                draw();
-                currNum*=2;
-                curNum.textContent = numToRead(currNum);
-                numUpdCost.textContent = numToRead(cost1);
-            }
-        }
-
-        spdBt.onclick = function () {
-            check = buying(score,cost2);
-            if (check){
-                score = score-cost2;
-                cost2=Math.round(cost2*3.4);
-                time--;
-                curSpeed.textContent = time/10 + 's'
-                spUpdCost.textContent = numToRead(cost2);
-            }
-        }
-
-        function buying(score,cost) {
-            if (score>=cost){
-                return true;
-            }
-            else return false;
-        }
-
-        function draw () {
-            for (let i = 0; i<6 ; i++) {
-                for (let j = 0; j<4; j++) {
-                    if (field[i][j]!=0)
-                    if (+field[i][j]>999999999){
-                        fieldblock[i][j].textContent = (field[i][j]/1000000).toFixed(0) + 't';
-                        fieldblock[i][j].style.fontSize = 0.75+'em';
-                    }else if (+field[i][j]>999999) {
-                        fieldblock[i][j].textContent = (field[i][j]/1000000).toFixed(0) + 'm';
-                        fieldblock[i][j].style.fontSize = 0.75+'em';
-                    }else if (+field[i][j]>999){
-                        fieldblock[i][j].textContent = (field[i][j]/1000).toFixed(0) + 'k';
-                        fieldblock[i][j].style.fontSize = 0.75+'em';
-                    }else{
-                        fieldblock[i][j].textContent = field[i][j];
-                        fieldblock[i][j].style.fontSize = 1+'em';
-                    }  
-                    else{
-                        fieldblock[i][j].textContent = '' 
-                    }
-                }
-            }
-        }
-        draw();
-
-        function crColor(num) {
-            arr = String(num).split('');
-            arr.length = 6;
-            res = '#';
-            for (let i = 1; i<7; i++){
-                if (arr[arr.length-i]) {
-                    res+=arr[arr.length-i];
-                }else {
-                    res+='0';
-                }
-            }
-            return res;
-        }
-
-        function spawn () {
-            start:
-            for (let i = 0; i<6 ; i++) {
-                for (let j = 0; j<4; j++) {
-                    if (field[i][j]==0) {
-                        field[i][j]=currNum;
-                        break start;
-                    }
-                }
-            }
-        }
-
-        function State () {
-            this.state = state;
-        }
-
-        State.prototype.inc = function () {
-            this.state++;
-            this.update();
-        }
-
-        State.prototype.click = function () {
-            this.state += 5;
-            this.update();
-        }
-
-        State.prototype.update = function () {
-            while (this.state>100) {
-                this.state-=100;
-                spawn();
-                draw();
-            }
-        }
-
-        let states = new State();
-        states.click();
-
-        but.onclick = () => {
-            states.click();
-        }
-
-        setInterval(() => {
-            load.style.background = `linear-gradient(to right, ${color} ${states.state}%, transparent ${states.state+2}%)`;
-            states.inc();
-            localStorage.setItem('field',field);
-            localStorage.setItem('score',score);
-            localStorage.setItem('state',states.state);
-            localStorage.setItem('currNum',currNum);
-            localStorage.setItem('cost1',cost1);
-            localStorage.setItem('cost2',cost2);
-            localStorage.setItem('time',time);
-            localStorage.setItem('sum', currentSum());
-            
-        },time);
-        setInterval(() => {
-            score = scoreupdate(score, currentSum());
-            sum.textContent = `Sum: ${numToRead(currentSum())}`;
-            scor.textContent = `Score: ${numToRead(score)}`;
-        },1000)
-    </script>
+    <script src="core.js"></script>
 </body>
 </html> 
